# simple-wavelet

./: CMakeLists.txt  LICENSE.md  matrix.cpp  matrix.h  simple_wavelet.pc.in  sw.cpp  vector.h  wavelet.cpp  wavelet.h
